--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "axios": "^1.6.0",
     "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-markercluster": "^4.2.1",
     "react-router-dom": "^7.5.0",
     "recharts": "^2.15.2"
   },
