--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,7 @@
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
-    "node-cron": "^3.0.2",
+    "node-cron": "^3.0.3",
     "typescript": "^5.8.3",
     "winston": "^3.17.0"
   },
@@ -36,6 +36,7 @@
     "@types/helmet": "^0.0.48",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.2",
+    "@types/node-cron": "^3.0.11",
     "jest": "^29.6.2",
     "nodemon": "^3.0.1",
     "ts-node-dev": "^2.0.0"
