--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ frontend/node_modules
 backend/node_modules/
 backend/package-lock.json
 
-
 # Environment variables
 backend/.env
 backend/.env.local
@@ -37,13 +36,15 @@ backend/Thumbs.db
 backend/tmp/
 backend/temp/
 
+# Data files
 tdr_data/
 wise_data/
 wise_backup_data/
 tdr_backup_data/
 
-# docker fiels
+# Docker fiels
 backend/Dockerfile
+backend/.dockerignore
 backend/*.tar
 backend/*.7z
 backend/*.zip
