--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Show workspace files
+        run: |
+          pwd
+          ls -R .
+
       # 2. 切到 backend 資料夾，build image
       - name: Build Docker image
+        working-directory: ./backend
         run: |
-          cd monitoring-deploy/backend
           docker build -t monitoring-backend:latest .
 
       # 3. 把 image 存成 tar
