--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "@influxdata/influxdb-client": "^1.35.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs-extra": "^11.3.0",
