feat(scanner): Persist and calculate 10-min rainfall for WISE rain gauges
This change improves the accuracy and efficiency of providing 10-minute
rainfall data by pre-calculating it during the scanning phase and storing
it directly in InfluxDB, reducing query-time computation.

--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,7 @@ backend/.DS_Store
 backend/Thumbs.db
 
 # Temporary files
-backend/tmp/
-backend/temp/
+backend/rainGaugeState.json
 
 # Data files
 tdr_data/
